feat(build): update Firebase and Play Services dependencies - Added Firebase modules: Auth, Analytics, Database, Crashlytics - Integrated Google Identity, Credential Manager, and AdMob services - Updated AGP version to 8.9.2 and Compose BOM to 2025.05.00 - Registered new plugins for google-services and crashlytics in versions catalog

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TestStripMarketplace"
         tools:targetApi="31">
+
+        <!-- ✅ AdMob Test App ID (replace before release) -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -19,7 +25,6 @@
             android:theme="@style/Theme.TestStripMarketplace">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
