ci: add Android CI workflow and ignore local Base64 dump
- Add `.github/workflows/android-ci.yml` to run `./gradlew clean build` on push and pull_request
- Decode `GOOGLE_SERVICES_JSON` secret into `app/google-services.json` at build time
- Update `.gitignore` to ignore `gs_base64.txt`

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ misc.xml
 /build/
 /**/build/
 .cxx/
-.cxx/Debug/
+/cxx/Debug/
 /captures/
 /externalNativeBuild/
 
@@ -52,6 +52,9 @@ local.properties
 /app/google-services.json
 *.jks
 *.keystore
+
+# CI helper (Base64-encoded google-services.json)
+gs_base64.txt
 
 # ───────────────────────────────────────────────
 # Crashlytics & Analytics (Optional, but common)
