refactor(admin): rename “buyer” to “wholesaler” across codebase
- Update all Firebase paths from `/buyers` to `/wholesalers`
- Rename data class `Buyer` ➔ `Wholesaler` and related ViewModel identifiers
- Update Composables and dialogs: `SelectBuyerDialog` ➔ `SelectWholesalerDialog`, labels and placeholders
- Change spinner/dropdown variables (`buyerMap`, `buyerListMap`, `allBuyers`) to wholesaler equivalents
- Adjust ProductsTab, ScanScreen, UsersTab, AdminActionsTab to use wholesaler terminology and data
- Modify function signatures and variable names (`onBuyerSelected` ➔ `onWholesalerSelected`, etc.)
- Ensure role dropdowns include “wholesaler” alongside existing roles
- Update unit tests and mock data to reference `wholesaler` instead of `buyer`

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,7 @@
 [versions]
 agp = "8.10.0"
+coilCompose = "2.4.0"
+core = "3.4.1"
 kotlin = "2.0.21"
 coreKtx = "1.16.0"
 junit = "4.13.2"
@@ -20,10 +22,13 @@ googleFirebaseCrashlytics = "3.0.3"
 materialIconsExtended = "1.7.8"
 playServicesAds = "24.2.0"
 firebaseStorageKtx = "21.0.1"
+zxingAndroidEmbedded = "4.3.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
+core = { module = "com.google.zxing:core", version.ref = "core" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -47,6 +52,7 @@ firebase-crashlytics = { group = "com.google.firebase", name = "firebase-crashly
 play-services-ads = { group = "com.google.android.gms", name = "play-services-ads", version.ref = "playServicesAds" }
 lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version = "2.9.0" }
 firebase-storage-ktx = { group = "com.google.firebase", name = "firebase-storage-ktx", version.ref = "firebaseStorageKtx" }
+zxing-android-embedded = { module = "com.journeyapps:zxing-android-embedded", version.ref = "zxingAndroidEmbedded" }
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
